near identical copy made

--- a/style.css
+++ b/style.css
@@ -1,3 +1,105 @@
-body {
-    background: white;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
+
+header {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    padding: 10px;
+}
+
+main {
+    position: fixed;
+    width: 100%;
+    top: 25%;
+    text-align: center;
+}
+
+footer {
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    padding: 3px;
+    background-color: #f2f2f2;
+    border-color: #e4e4e4;
+    color: rgb(105, 105, 105);
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    background-color: inherit;
+    border-color: inherit;
+}
+
+nav ul {
+    list-style: none;
+    background-color: inherit;
+}
+
+nav li {
+    display: inline-block;
+    background-color: inherit;
+    
+}
+
+nav a {
+    font-size: small;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 10px;
+    background-color: inherit;
+    color: inherit;
+}
+
+nav a:link {
+    text-decoration: none;
+}
+
+nav a:hover {
+    text-decoration: underline;
+}
+
+.apps {
+    height: 15px;
+    width: 15px;
+}
+
+.logo {
+    height: 92px;
+    width: 272px;
+}
+
+.searchbar {
+    width: 600px;
+    height: 45px;
+    border-radius: 92px;
+    border: solid 1px rgb(214, 214, 214);
+    margin: 20px;
+    padding-left: 40px;
+}
+
+.button {
+    background-color: #f2f2f2;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 2px;
+    margin: 5px;
+    color: rgb(105, 105, 105);
+    font-size: 11pt;
+}
+
+.signin {
+    background-color: #4387fd;
+    color: white;
+    border: none;
+    border-radius: 1px;
+    padding: 10px;
+}
+
+
+
